crud_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-web-service
  labels:
    app: crud-web-service
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: crud
  template:
    metadata:
      labels:
        env: crud
    spec:
      containers:
      - name: web-service-app
        image: energy1971/crud_debug_service
        # edu_crud_service:latest
        ports:
        - name: web-port
          containerPort: 8000
