crud_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  type: ClusterIP
  selector:
    env: crud
  ports:
    - name: prim
      protocol: TCP
      port: 80
      targetPort: web-port
