crud_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: crud-service
            port:
              number: 80 
      - path: /swaggerui
        pathType: Prefix
        backend:
          service:
            name: crud-service
            port:
              number: 80
